# Nyx

./: .gitignore  Build.sh  CONTRIBUTING.md  Cargo.toml  Code_Of_Conduct.md  Contribution.md  IMPROVEMENT.TXT  Issues_Template.md  License  NYX-Evolution.md  NYX-Evolution.txt  Readme.md  Request_Template.md  build_log.txt  x86_64-nyx.json
.cargo/: config.toml
.devcontainer/: DOCKERFILE  devcontainer.json
.github/workflows/: build.yaml  release.yaml
Commands/: CMD-command(for bash).txt
Ideas/: Nyx Idea.rtf  Nyx Study Topics.rtf
Source/: test  test.asm
Source/Kernel/: boot.asm  boot.cpp  makefile  nyx.elf
Source/Kernel/isodir/boot/: boot.elf
Source/Kernel/isodir/boot/grub/: grub.cfg
Source/Kernel/scheduler/Job-Classify/: job_classifier.pkl  python.py
Source/Nyxsh/: Nyxsh.asm  nyxsh
Source/Testing/: build_and_run.sh  test.asm
apps/: bootlog.rs  explorer.rs  fetch.rs  monitor.rs  sysinfo.rs
apps/compositor/: Cargo.toml
apps/compositor/src/: main.rs
apps/explorer/: Cargo.toml
apps/init/: Cargo.toml
apps/init/src/: main.rs
apps/network/: Cargo.toml
apps/network/src/: main.rs
apps/settings/: Cargo.toml
apps/sysmon/: Cargo.toml
apps/sysmon/src/: main.rs
apps/terminal/: Cargo.toml
apps/terminal/src/: main.rs
libs/api/src/: lib.rs
libs/gui/: Cargo.toml
libs/gui/src/: canvas.rs  draw.rs  lib.rs  ui.rs
nyx-api/: Cargo.toml
nyx-api/src/: lib.rs
nyx-c/: hello.c  hello.elf  main.c  nyx_syscalls.h
nyx-explorer/: Cargo.toml
nyx-explorer/src/: main.rs
nyx-gui/: Cargo.toml
nyx-gui/src/: app.rs  canvas.rs  effects.rs  font.rs  lib.rs  ui.rs
nyx-init/: Cargo.toml
nyx-kernel/: Cargo.toml  build.rs  cargo.toml  custom_acpi.c  ext4_wrapper.c
nyx-kernel/src/: acpi.rs  allocator.rs  apic.rs  c_stubs.rs  drm.rs  executor.rs  fs.rs  gdt.rs  gui.rs  hello.elf  initrd.tar  installer.rs  interrupts.rs  ioapic.rs  laptop_fans.rs  main.rs  memory.rs  mouse.rs  partitioner.rs  pci.rs  percpu.rs  process.rs  rust.elf  scheduler.rs  serial.rs  shell.rs  smp.rs  tarfs.rs  task.rs  thermal.rs  time.rs  trampoline.asm  usb.rs  vfs.rs  vga_log.rs  window.rs  xhci.rs
nyx-kernel/src/drivers/: achi.rs  ahci.rs  block.rs  mod.rs  nvme.rs
nyx-kernel/src/drivers/gpu/: intel.rs  mod.rs
nyx-kernel/src/drivers/gpu/intel/: mod.rs
nyx-kernel/src/drivers/net/: iwlwifi.rs  mod.rs  rtl8168.rs
nyx-kernel/src/entity/: mod.rs  seed.rs  state.rs
nyx-network/: Cargo.toml
nyx-network/src/: main.rs
nyx-recv/: decode.py  dsdt.dsl  dsdt.hex  udp.py
nyx-rust-app/: Cargo.toml
nyx-rust-app/.cargo/: config.toml
nyx-rust-app/src/: main.rs
nyx-settings/: Cargo.toml
nyx-settings/src/: main.rs
nyx-sysmon/: Cargo.toml
nyx-sysmon/src/: main.rs
nyx-terminal/: Cargo.toml
nyx-terminal/src/: main.rs
nyx-user/: Cargo.toml  build.rs  linker.ld
nyx-user/.cargo/: config.toml
nyx-user/src/: console.rs  gfx.rs  main.rs  syscalls.rs
nyx-user/src/apps/: bootlog.rs  browser.rs  clock.rs  dns.rs  editor.rs  explorer.rs  https.rs  mod.rs  monitor.rs  netchat.rs  sysinfo.rs  terminal.rs
nyx-user/src/gfx/: canvas.rs  draw.rs  effects.rs  mod.rs  ui.rs
runner/src/: main.rs
script/: local.txt
tools/runner/: Cargo.toml
