[workspace]
members = [
    "nyx-kernel",
    "compiler",
    "runner",
    "nyx-user",
    "nyx-rust-app",
    "nyx-init",       
    "nyx-api",        
    "nyx-terminal"    
, "nyx-gui", "nyx-settings", "nyx-network", "nyx-sysmon", "nyx-explorer"]

# Force Cargo to ONLY build the kernel by default
default-members = ["nyx-kernel"]

resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
