[workspace]
members = [
    "nyx-kernel",
    
    # Tools
    "tools/compiler",
    "tools/runner",
    
    # Libraries
    "libs/api",
    "libs/gui",
    
    # Applications
    "apps/init",
    "apps/compositor",
    "apps/terminal",
    "apps/settings",
    "apps/explorer",
    "apps/network",
    "apps/sysmon",
    
]

# Force Cargo to ONLY build the kernel by default
default-members = ["nyx-kernel"]

resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"