[package]
name = "nyx-kernel"
version = "0.1.0"
edition = "2021"

[features]
default = []
net_trace = [] #  Milestone 2.3: Enables packet sniffing logs when needed

[dependencies]
# Bootloader
bootloader_api = "0.11.15"

# Architecture
x86_64 = "0.14.13"

# Hardware
volatile = "0.2.6"
spin = "0.9.2"
uart_16550 = "0.2.19"
pc-keyboard = "0.7.0"
pic8259 = "0.10.1"

# Memory
linked_list_allocator = "0.9.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

# Logging
log = { version = "0.4", default-features = false }

# Graphics
noto-sans-mono-bitmap = { version = "0.2.0", features = ["size_32"] }

# Async
futures = { version = "0.3", default-features = false, features = ["alloc"] }

# Cryptography
sha3 = { version = "0.10", default-features = false }

aml = "0.16.4"

#  Milestone 2.1: Added proto-dhcpv4 and socket-dhcpv4 features!
smoltcp = { version = "0.9.1", default-features = false, features = ["alloc", "log", "medium-ethernet", "proto-ipv4", "proto-dhcpv4", "socket-icmp", "socket-udp", "socket-tcp", "socket-dhcpv4", "socket-dns"] }

# File systems
ext4plus = "0.1.0-beta.3"

[build-dependencies]
bindgen = "0.69.1"
cc = "1.0"

[package.metadata.bootloader]
map-physical-memory = true
run-args = ["-display", "none", "-serial", "stdio"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"