[package]
name = "nyx-user"
version = "0.1.0"
edition = "2021"

[dependencies]
# Allocator for Vec, String, Box
linked_list_allocator = "0.9.0"

# Keyboard handling (Scancodes -> Chars)
pc-keyboard = "0.7.0"

# Font Bitmap Data (Used by gfx/font.rs and gfx/draw.rs)
noto-sans-mono-bitmap = { version = "0.2.0", features = ["size_32"] }

[profile.release]
panic = "abort"